[gd_scene load_steps=7 format=3 uid="uid://cycyr22y5agba"]

[ext_resource type="Script" uid="uid://dkldpm77yyej" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://cha4ohhtlgmy5" path="res://scripts/camera.gd" id="2_g2els"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3vyb7"]
albedo_color = Color(0.1812, 0.1812, 0.1812, 1)
metallic = 0.7
roughness = 0.15

[sub_resource type="BoxMesh" id="BoxMesh_g2els"]
material = SubResource("StandardMaterial3D_3vyb7")
size = Vector3(0.575, 0.355, 0.125)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g2els"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_3vyb7"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_3vyb7")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.637485, 0)
cull_mask = 1048573
fov = 85.0
near = 0.01
script = ExtResource("2_g2els")

[node name="Face" type="MeshInstance3D" parent="Camera3D"]
transform = Transform3D(0.999998, 0.000736232, 0.00164921, -0.000731691, 0.999996, -0.00276091, -0.00165123, 0.0027597, 0.999995, -0.0265362, 0, -0.544398)
layers = 2
mesh = SubResource("BoxMesh_g2els")

[node name="SteamAudioListener" type="SteamAudioListener" parent="Camera3D"]

[node name="InteractRay" type="RayCast3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.587774)
target_position = Vector3(0, -1.5, 0)
collision_mask = 2
collide_with_areas = true

[node name="GrabPoint" type="Node3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.65122)

[node name="HandPosition" type="Node3D" parent="Camera3D"]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 0.428411, -0.215955, -0.416155)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_g2els")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_3vyb7")

[node name="FootstepRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.296633, 0)

[node name="SFXPlayer" type="SteamAudioPlayer" parent="."]
distance_attenuation = true
air_absorption = true
reflection = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.487988, -0.0155721)
attenuation_model = 3
panning_strength = 0.0

[node name="LocalSFXPlayer" type="AudioStreamPlayer" parent="."]
